--- a/views/home.html
+++ b/views/home.html
@@ -38,7 +38,7 @@
 	
 		<div class="fb-like" data-send="true" data-layout="button_count" data-width="450" data-show-faces="false" data-font="arial"></div>
 	<div class="greeting">
-			<h3 id="greeting">The Latest Space Technology Videos</h3>
+			<h3 id="greeting">The Latest and Greatest Space Technology Videos</h3>
 	</div>
 
 </div>
